--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,2 @@
-<%= form_for @user, controller: 'users', action: 'create' do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-
-  <%= f.label :email%>
-  <%= f.text_field :email%>
-
-  <%= f.label :continent%>
-  <%= f.text_field :continent %>
-
-  <%= f.label :country %>
-  <%= f.text_field :country %>
-
-  <%= f.submit "create" %>
-<% end %>
+<%= render 'form' %>
