--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-  <% puts "Welcome" current_user.name "!" %>
+   <p> Welcome, <%=current_user.username %> ! </p>
   <h1> The World Is At Your Door Step </h1>
   <% else %>
     <h1> The World Is At Your Door Step </h1>
