--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
-<h4> Welcome to Global Door! where you learn about Continents and Countries around the world. </h4>
+<h4> Welcome to Global Door! Where you learn about Continents and Countries around the world.</h4>
+	<h4>Please sign up using the following form! </h4>
 
 <%= render 'form' %>
