--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, controller: 'users', action: 'create' do |f| %>
+<%= form_for @user do |f| %>
 <div>
   <%= f.label :name %>
   <br>
