--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,6 @@
 <p> Your favorite continent is <%= current_user.continent.capitalize %> </p>
 <p> Your favorite country is <%= current_user.country.capitalize %> </p>
 
-<h3> Continents </h3>
-<ol>
-	<li> North America </li>
-	<li> South America </li>
-	<li> Asia </li>
-	<li> Europe </li>
-	<li> Africa </li>
-	<li> Antarctica </li>
-	<li> Australia </li>
-</ol>
+<p><a href="/continents"> Continents </a></p>
+
+
