--- a/app/views/continents/index.html.erb
+++ b/app/views/continents/index.html.erb
@@ -1,12 +1,12 @@
 <h3> Continents </h3>
 
 <ol>
-	<li> North America </li>
-	<li> South America </li>
-	<li> Asia </li>
-	<li> Europe </li>
-	<li> Africa </li>
-	<li> Antarctica </li>
-	<li> Australia </li>
+	<li><a href="continents/north_america"> North America</a></li>
+	<li><a href="continents/south_america"> South America</a></li>
+	<li><a href="continents/asia"> Asia</a></li>
+	<li><a href="continents/europe"> Europe</a></li>
+	<li><a href="continents/africa"> Africa</a></li>
+	<li><a href="continents/antartica"> Antartica</a></li>
+	<li><a href="continents/australia"> Australia</a></li>
 </ol>
 
