--- a/app/views/continents/australia.html.erb
+++ b/app/views/continents/australia.html.erb
@@ -1,3 +1,3 @@
-<h2> Antartica </h2>
+<h2> Australia </h2>
 
 <p> Australia officially the Commonwealth of Australia,[12] is a sovereign country comprising the mainland of the Australian continent, the island of Tasmania and numerous smaller islands. It is the largest country in Oceania and the world's sixth-largest country by total area. The neighbouring countries are Papua New Guinea, Indonesia and East Timor to the north; the Solomon Islands and Vanuatu to the north-east; and New Zealand to the south-east. Australia's capital is Canberra, and its largest city is Sydney.</p>
