--- a/app/views/continents/index.html.erb
+++ b/app/views/continents/index.html.erb
@@ -1,4 +1,5 @@
 <h3> Continents </h3>
+<p> Click on a continent you want to learn more about. Once its clicked on, you can add a bucket list of the countries you want to visit. </p>
 
 <ol>
 	<li><a href="continents/north_america"> North America</a></li>
