--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h4> Welcome to Global Door! Where you learn about Continents and add countries you want to travel to. </h4>
+<h4> Welcome to Global Door! Where you learn about Continents and add countries you travelled to and want to travel to. </h4>
 	<h4>Please sign up using the following form! </h4>
 
 <%= render 'form' %>
