--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,3 +1,3 @@
-<%= @country.name %>
-<%= @country.city %>
-<%= @country.reason %>
+<%= current_user.country.name %>
+<%= current_user.country.city %>
+<%= current_user.country.reason  %>
