--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -5,9 +5,9 @@
   <%= f.text_field :name %>
   <br>
   <br>
-   <%= f.label :city %>
+   <%= f.label :country %>
   <br>
-  <%= f.text_field :city%>
+  <%= f.text_field :country%>
   <br>
   <br>
   <%= f.label :'Reason why you want to visit' %>
