--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,3 +1,5 @@
-<%= current_user.country.name %>
-<%= current_user.country.city %>
-<%= current_user.country.reason  %>
+<%= @name%>
+<%= @city%>
+<%= @reason%>
+
+<p>To log in the countries you've visited click<a href="/countries/new"> here! </a></p>
