--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -1,3 +1,7 @@
 
-    <h1> The World Is At Your Door Step </h1>
+    <h3> The World Is At Your Door Step </h3>
+
+    <p>To view list of continents click<a href="/continents"> here! </a></p>
+  	<p>To view your countries home page click<a href="/countries"> here! </a></p>
+ 	<p>To log in the countries you've visited click<a href="/countries/new"> here! </a></p>
 
