--- a/app/views/continents/south_america.html.erb
+++ b/app/views/continents/south_america.html.erb
@@ -2,5 +2,5 @@
 
 <p> South America is a continent located in the Western Hemisphere, mostly in the Southern Hemisphere, with a relatively small portion in the Northern Hemisphere. It may also be considered a subcontinent of the Americas, which is how it is viewed in the Spanish and Portuguese-speaking regions of the Americas.</p>
 
-<p> To add a country you visited or want to visit <a href="/countries/new"> Click here </a>
+<p> To add a country you want to visit in South America click <a href="/countries/new"> here</a>!</p>
 
