--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -10,7 +10,7 @@
   <%= f.text_field :city%>
   <br>
   <br>
-  <%= f.label :'Reason why you want to visit' %>
+  <%= f.label :'Favorite part of city' %>
   <br>
   <%= f.text_field :reason %>
   <br>
