--- a/app/views/continents/africa.html.erb
+++ b/app/views/continents/africa.html.erb
@@ -2,4 +2,4 @@
 
 <p>Africa is the world's second largest and second most-populous continent (the first being Asia in both categories). At about 30.3 million km2 (11.7 million square miles) including adjacent islands, it covers 6% of Earth's total surface area and 20% of its total land area. With 1.2 billion people as of 2016, it accounts for about 16% of the world's human population. The continent is surrounded by the Mediterranean Sea to the north, the Isthmus of Suez and the Red Sea to the northeast, the Indian Ocean to the southeast and the Atlantic Ocean to the west. The continent includes Madagascar and various archipelagos. It contains 54 fully recognised sovereign states (countries), nine territories and two de facto independent states with limited or no recognition. The majority of the continent and its countries are in the Northern Hemisphere, with a substantial portion and number of countries in the Southern Hemisphere.</p>
 
-<p> To add a country you visited or want to visit <a href="/countries/new"> Click here </a>
+<p> To add a country you want to visit in Africa click <a href="/countries/new"> here</a>!</p>
