--- a/app/views/continents/australia.html.erb
+++ b/app/views/continents/australia.html.erb
@@ -4,4 +4,4 @@
 
 <%= render '/countries/form' %>
 
-<p> To add a country you visited or want to visit <a href="/countries/new"> Click here </a>
+<p> To add a city you want to visit in Australia click <a href="/countries/new"> here</a>!</p>
