--- a/app/views/continents/index.html.erb
+++ b/app/views/continents/index.html.erb
@@ -1,6 +1,6 @@
 
 <h3> Continents </h3>
-<p> Click on a continent you want to learn more about. Once its clicked on, you can add a bucket list of the countries you want to visit. </p>
+<p> Click on a continent you want to learn more about.</p>
 
 <ol>
 	<li><a href="continents/africa"> Africa</a></li>
