--- a/app/views/continents/north_america.html.erb
+++ b/app/views/continents/north_america.html.erb
@@ -2,4 +2,4 @@
 
 <p> North America is a continent entirely within the Northern Hemisphere and almost all within the Western Hemisphere; it is also considered by some to be a northern subcontinent of the Americas. It is bordered to the north by the Arctic Ocean, to the east by the Atlantic Ocean, to the west and south by the Pacific Ocean, and to the southeast by South America and the Caribbean Sea.</p>
 
-<p> To add a country you want to visit in North America click <a href="/countries/new"> here</a>!</p>
+<p> To add a country you want to visit in North America click <a href="/continents/new"> here</a>!</p>
