--- a/app/views/continents/antartica.html.erb
+++ b/app/views/continents/antartica.html.erb
@@ -2,4 +2,4 @@
 
 <p> Antarctica is Earth's southernmost continent. It contains the geographic South Pole and is situated in the Antarctic region of the Southern Hemisphere, almost entirely south of the Antarctic Circle, and is surrounded by the Southern Ocean. At 14,000,000 square kilometres (5,400,000 square miles), it is the fifth-largest continent. For comparison, Antarctica is nearly twice the size of Australia. About 98% of Antarctica is covered by ice that averages 1.9 km (1.2 mi; 6,200 ft) in thickness, which extends to all but the northernmost reaches of the Antarctic Peninsula.</p>
 
-<p> If you want to visit Antartica, add it <a href="/countries/new"> here</a>!</p>
+<p> If you want to visit Antartica, add it <a href="/continents/new"> here</a>!</p>
