--- a/app/views/continents/australia.html.erb
+++ b/app/views/continents/australia.html.erb
@@ -2,6 +2,5 @@
 
 <p> Australia officially the Commonwealth of Australia,[12] is a sovereign country comprising the mainland of the Australian continent, the island of Tasmania and numerous smaller islands. It is the largest country in Oceania and the world's sixth-largest country by total area. The neighbouring countries are Papua New Guinea, Indonesia and East Timor to the north; the Solomon Islands and Vanuatu to the north-east; and New Zealand to the south-east. Australia's capital is Canberra, and its largest city is Sydney.</p>
 
-<%= render '/countries/form' %>
 
-<p> To add a city you want to visit in Australia click <a href="/countries/new"> here</a>!</p>
+<p> To add a city you want to visit in Australia click <a href="/continents/new"> here</a>!</p>
