--- a/app/views/continents/europe.html.erb
+++ b/app/views/continents/europe.html.erb
@@ -2,4 +2,4 @@
 
 <p> Europe encompasses an area of 10,180,000km² (3,930,000 square miles), stretching from Asia to the Atlantic, and from Africa to the Arctic. European countries welcome more than 480 million international visitors per year, more than half of the global market, and 7 of the 10 most visited countries are European nations.</p>
 
-<p> To add a country you want to visit in Europe click <a href="/countries/new"> here</a>!</p>
+<p> To add a country you want to visit in Europe click <a href="/continents/new"> here</a>!</p>
