--- a/app/views/continents/_form.html.erb
+++ b/app/views/continents/_form.html.erb
@@ -2,12 +2,12 @@
 <div>
   <%= f.label :'What continent do you want to visit?' %>
   <br>
-  <%= f.text_field :cont_name %>
+  <%= f.text_field :continent_name%>
   <br>
   <br>
   <%= f.label :'What country in this continent?' %>
   <br>
-  <%= f.password_field :country_name %>
+  <%= f.text_field :country_name %>
   <br>
   <br>
   <%= f.label :'Which cities do you want to visit? What are some things in your itinerary you want to accomplish?' %>
