--- a/app/views/continents/australia.html.erb
+++ b/app/views/continents/australia.html.erb
@@ -4,3 +4,4 @@
 
 
 <p> To add a city you want to visit in Australia click <a href="/continents/new"> here</a>!</p>
+<p> If you've already visited Australia, add which cities you've visited<a href="/countries/new"> here</a>!</p>
