--- a/app/views/continents/south_america.html.erb
+++ b/app/views/continents/south_america.html.erb
@@ -4,3 +4,5 @@
 
 <p> To add a country you want to visit in South America click <a href="/continents/new"> here</a>!</p>
 
+<p> If you've already visited South America, add which countries or cities you've visited<a href="/countries/new"> here</a>!</p>
+
