--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,5 +1,5 @@
 <%= @name%>
 <%= @city%>
-<%= @reason%>
+<%= @description%>
 
 <p>To log in the countries you've visited click<a href="/countries/new"> here! </a></p>
