--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
       <div class="container">
     <% if current_user %>
-       <a href="/continents"> Continents </a>
+       <a href="/countries"> Countries </a>
        <br>
        <a href="/logout"> Log-Out </a>
        <br>
