--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,5 +1,5 @@
-<h3> You were in <%= @country.continent_name%></h3>
-<h4> You visited: <<%= @country.name%> </h4>
+<h4> Continent: <%= @country.continent_name%></h4>
+<h5> Country: <%= @country.name%> </h5>
 <h5> Cities you toured: <%= @country.city%></h5>
 <p><%= @country.description%></p>
 
@@ -8,4 +8,4 @@
     <br>
   <% end %>
 
-<p>To edit click<a href="/countries/edit"> here! </a></p>
+<h5>To edit click<a href="/countries/edit"> here! </a></h5>
