--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <p> Your favorite continent is <%= current_user.continent.capitalize %> </p>
 <p> Your favorite country is <%= current_user.country.capitalize %> </p>
 
-  <p>To view list of continents click<a href="/continents"> here! </a></p>
   <p>To view your countries home page click<a href="/countries"> here! </a></p>
-  <p>To log in the countries you've visited click<a href="/countries/new"> here! </a></p>
+ 	<p>To log in the countries you've visited click<a href="/countries/new"> here! </a></p>
+ 	<p>To log in the countries you want to visit click here! </a></p>
 
 
 
